name:                reflex-html
version:             0.1.1
synopsis:            HTML DSL for reflex-dom
description:
license:             BSD3
license-file:        LICENSE
author:              Oliver Batchelor
category:            Game
build-type:          Simple 
-- extra-source-files:  
cabal-version:       >=1.10


library
  exposed-modules:   
    Reflex.Html,
    Reflex.Html.Elements,
    Reflex.Html.Events,
    Reflex.Html.Input,
    Reflex.Html.Attributes,
    Reflex.Html.KeyCodes,
    Reflex.Html.Collection
    
  other-modules: 
    Reflex.Html.Internal.Attributes,
    Reflex.Html.Internal.Element,
    Reflex.Html.Internal.ElementEvents,
    Reflex.Html.Internal.Events,
    Reflex.Html.Internal.HtmlT,
    Reflex.Html.Internal.Util,
    Reflex.Html.Internal.WebView,
    Reflex.Html.Internal.Collection,
    Reflex.Html.Internal.Host

    
  
  hs-source-dirs: src
  build-depends:
    base,
    reflex, 
    reflex-host,
    ghcjs-dom,
    containers,
    transformers,
    contravariant,
    mtl,
    lens,
    data-default,
    safe,
    exception-transformers,
    bytestring,
    singletons,
    semigroups,
    reducers,
    dependent-sum,
    dependent-sum-template >= 0.0.0.4 && < 0.1,
    bifunctors
    
  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    cpp-options: -D__GHCJS__
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      glib == 0.13.*,
      gtk3 == 0.13.*,
      webkitgtk3 == 0.13.*,
      webkitgtk3-javascriptcore == 0.13.*,
      directory
    
  default-language: Haskell2010  
  default-extensions: GeneralizedNewtypeDeriving, DeriveGeneric, TupleSections, EmptyDataDecls, RecursiveDo, ScopedTypeVariables, 
                      FlexibleContexts, FlexibleInstances, MultiParamTypeClasses, GADTs, RankNTypes, TypeFamilies, DataKinds, ConstraintKinds,
                      StandaloneDeriving, NoMonomorphismRestriction


  

