name:                reflex-html
version:             0.1
synopsis:            HTML DSL for reflex-dom
description:
license:             BSD3
license-file:        LICENSE
author:              Oliver Batchelor
category:            FRP
build-type:          Simple 
cabal-version:       >=1.10


executable html-test
  hs-source-dirs: test
  main-is: Main.hs

  build-depends:
    base,
    reflex,
    reflex-html,
    transformers,
    mtl,
    containers

library
  exposed-modules:   
    Reflex.Html.Html,
    Reflex.Html.Render,
    Reflex.Html.Event
  other-modules:
    Data.Unsafe.Tag,
    Reflex.Dirty
  
  hs-source-dirs: src
  build-depends:
    base,
    reflex >= 0.4.1, 
    reflex-transformers,
    ghcjs-dom >= 0.2.3,
    containers,
    contravariant,
    lens,
    data-default,
    concurrent-supply,
    bytestring,
    dependent-sum,
    dependent-sum-template,
    dependent-map,
    semigroups,
    reducers,
    bifunctors,
    transformers,
    mtl,
    dlist,
    stateWriter >= 0.2.6
  
  default-language: Haskell2010
  default-extensions: GeneralizedNewtypeDeriving, DeriveGeneric, TupleSections, EmptyDataDecls, RecursiveDo, ScopedTypeVariables, 
                      FlexibleContexts, FlexibleInstances, GADTs, RankNTypes, TypeFamilies, DataKinds, ConstraintKinds, NoMonomorphismRestriction


  

